removed unused annotations on temporary entity "Prijava" (not needed in db, just for signin); merged with sign-in branch

--- a/services/pom.xml
+++ b/services/pom.xml
@@ -17,6 +17,15 @@
             <artifactId>kumuluzee-cdi-weld</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.kumuluz.ee</groupId>
+            <artifactId>kumuluzee-jta-narayana</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.kumuluz.ee.rest</groupId>
+            <artifactId>kumuluzee-rest-core</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+        <dependency>
             <groupId>si.fri.tpo10</groupId>
             <artifactId>entities</artifactId>
             <version>0.0.1</version>
