--- a/api/pom.xml
+++ b/api/pom.xml
@@ -20,11 +20,15 @@
             <groupId>com.kumuluz.ee</groupId>
             <artifactId>kumuluzee-servlet-jetty</artifactId>
         </dependency>
-
         <dependency>
             <groupId>com.kumuluz.ee</groupId>
             <artifactId>kumuluzee-jax-rs-jersey</artifactId>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.kumuluz.ee.cors</groupId>-->
+            <!--<artifactId>kumuluzee-cors</artifactId>-->
+            <!--<version>1.0.3</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>si.fri.tpo10</groupId>
             <artifactId>services</artifactId>
