--- a/api/pom.xml
+++ b/api/pom.xml
@@ -29,6 +29,13 @@
             <artifactId>kumuluzee-cors</artifactId>
             <version>${kumuluzee.cors.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-multipart</artifactId>
+            <version>2.25.1</version>
+        </dependency>
+
         <dependency>
             <groupId>si.fri.tpo10</groupId>
             <artifactId>services</artifactId>
