--- a/services/pom.xml
+++ b/services/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>entities</artifactId>
             <version>0.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.xhtmlrenderer</groupId>
+            <artifactId>flying-saucer-pdf</artifactId>
+            <version>9.1.12</version>
+        </dependency>
     </dependencies>
 
 
