--- a/services/pom.xml
+++ b/services/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>entities</artifactId>
             <version>0.0.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>${itext.version}</version>
+        </dependency>
     </dependencies>
 
 
