--- a/api/pom.xml
+++ b/api/pom.xml
@@ -24,6 +24,16 @@
             <groupId>com.kumuluz.ee</groupId>
             <artifactId>kumuluzee-jax-rs-jersey</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13</version>
+        </dependency>
+        <dependency>
+            <groupId>com.itextpdf.tool</groupId>
+            <artifactId>xmlworker</artifactId>
+            <version>5.5.13</version>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>com.kumuluz.ee.cors</groupId>-->
             <!--<artifactId>kumuluzee-cors</artifactId>-->
